Fix overflowing style in article.css (#15)

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -53,6 +53,7 @@ pre code {
 a {
     color: #3498db;
     text-decoration: none;
+    word-break: break-word;
 }
 a:hover {
     text-decoration: underline;
@@ -60,11 +61,10 @@ a:hover {
 table {
     border-collapse: collapse;
     width: 100%;
-    margin: 1.25em 0;
 }
 th, td {
     border: 1px solid #ddd;
-    padding: 0.75em;
+    padding: 0.2em;
     text-align: left;
 }
 
